src/z80asm/z80asm2/t/40-syntax/expected/cu_wait_01.txt
% z88dk-z80asm -v -dump-after-parse t/40-syntax//input/cu_wait_01.asm
Define constant: __CPU_ZILOG__ = 1
Define constant: __CPU_Z80__ = 1
Assembling t/40-syntax/input/cu_wait_01.asm...
t/40-syntax/input/cu_wait_01.asm:1:8: error: Expected a value, got "\n"
    cu.wait 
           ^
t/40-syntax/input/cu_wait_01.asm:2:10: error: Expected comma between expressions in CU_WAIT
    cu.wait 0
             ^
t/40-syntax/input/cu_wait_01.asm:3:10: error: Unterminated expression after ","
    cu.wait 0,
             ^
t/40-syntax/input/cu_wait_01.asm:4:12: error: Unexpected token: ","
    cu.wait 0,0,
               ^
Program
    CuWaitStmt
        Location: t/40-syntax/input/cu_wait_01.asm:5:3
        Vertical (0..311):
            ExprLiteralInt: 0
        Horizontal (0..55):
            ExprLiteralInt: 0
    CuWaitStmt
        Location: t/40-syntax/input/cu_wait_01.asm:6:3
        Vertical (0..311):
            ExprLiteralInt: $137
        Horizontal (0..55):
            ExprLiteralInt: $37
